# mandelbrot

./: Main.hs  Pnm.hs  README.md  mandelbrot.cabal
