name:          mandelbrot
version:       1.0.0-pre
license:       GPL-3
license-file:  LICENSE
author:        Timothy Jones
maintainer:    Timothy Jones <tim@zmthy.net>
homepage:      https://github.com/zmthy/mandelbrot
bug-reports:   https://github.com/zmthy/mandelbrot/issues
copyright:     (c) 2017 Timothy Jones
category:      Math
build-type:    Simple
cabal-version: >= 1.10
synopsis:      Simple mandelbrot renderer for Haskell workshop

executable mandelbrot
  main-is:          Main.hs
  default-language: Haskell2010

  build-depends:
    base                 >= 4.9  && < 4.10,
    deepseq              >= 1.4  && < 1.5,
    optparse-applicative >= 0.13 && < 0.15,
    parallel             >= 3.2  && < 4.0,
    text                 >= 1.2  && < 1.3
